--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "chai": "^4.5.0",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "sinon": "^18.0.0"
   },
   "author": "",
   "license": "ISC",
